# WWD-n

./: CMakeLists.txt  README.md  prj.conf  tmp.txt
boards/: 96b_nitrogen_nrf52832.overlay
debug/: gdb_launch.sh  jlink_launch.sh  launch_al.sh
dts/bindings/spi/: micron,mt29f.yaml  tdk,icm42670p.yaml  waveshare,st7735s.yaml  waveshare,st7789v2.yaml
src/: circular_buffer.c  circular_buffer.h  clock.c  clock.h  main.c
src/display/: CMakeLists.txt  display.c  display.h  font.c  font.h  st7735s.c  st7789.c  st7789.h
src/display/st7735s/: gfx.c  st7735s.c  st7735s_compat.c  st7735s_compat.h
src/hardware/: button.c  button.h  led.c  led.h
src/hardware/ic/bms/: BQ25120A.h  bms_defs.h
src/hardware/ic/imu/: CMakeLists.txt  ICM_42670.c  ICM_42670.h  icm42670.c  imu.c  imu.h  imu_process.c  imu_process.h  inv_imu_apex.c  inv_imu_defs.h  inv_imu_driver.c  inv_imu_driver.h  inv_imu_transport.c  inv_imu_transport.h  inv_time.c  inv_time.h
src/ic/bms/: BQ25120A.c
src/ic/imu/: ICM_42670.c  ICM_42670.h  imu.c  imu.h  imu_process.c  imu_process.h  inv_imu_apex.c  inv_imu_apex.h  inv_imu_defs.h  inv_imu_driver.c  inv_imu_driver.h  inv_imu_regmap_rev_a.h  inv_imu_transport.c  inv_imu_transport.h
src/memory/: CMakeLists.txt  mt29f_defs.h  mt29f_nand.c  mt29f_nand.h  nvs.c  nvs.h
src/peripheral/: interrupt.c  interrupt.h  timer.c  timer.h
src/ui/: CMakeLists.txt  UIFunctions.c  UIFunctions.h  ui.c  ui.h  ui_display.c  ui_display.h  ui_menu.c  ui_menu.h
test/: README.md  quick_test_snippet.c  test_uifunctions.c
